# tasks

./: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 00ffd62755ee_initial.py
app/: background.py  config.py  db.py  dependencies.py  notifications.py  schemas.py
app/adapters/: models.py  repository.py
app/domain/: models.py
app/entrypoints/: fastapi_app.py
app/services/: task_service.py
tests/: conftest.py  test_config.py  test_tasks.py
